--- a/src/components/u-date-picker.vue/module.css
+++ b/src/components/u-date-picker.vue/module.css
@@ -30,7 +30,7 @@
 
 .body {
     position: relative;
-    z-index: 1;
+    z-index: 100;
     width: 248px;
     top: 100%;
     margin-top: 2px;
