--- a/src/components/u-date-time-picker.vue/module.css
+++ b/src/components/u-date-time-picker.vue/module.css
@@ -28,7 +28,7 @@
 
 .body {
     position: absolute;
-    z-index: 1;
+    z-index: 100;
     width: 100%;
     top: 100%;
     margin-top: 2px;
