--- a/src/components/u-form.vue/item.vue/module.css
+++ b/src/components/u-form.vue/item.vue/module.css
@@ -29,6 +29,7 @@
     position: absolute;
     left: 100%;
     top: 0;
+    z-index: 1;
     display: none;
     line-height: 26px;
     font-size: 12px;
